Minimalize newTab.xhtml + newTab.js

--- a/browser/base/content/newtab/newTab.xhtml
+++ b/browser/base/content/newtab/newTab.xhtml
@@ -16,5 +16,9 @@
 </head>
 <body>
   <iframe id="remotedoc" src="https://mozilla.github.io/remote-newtab/"/>
+  <script type="text/javascript;version=1.8"
+          src="chrome://browser/content/newtab/newTab.js">
+  </script>
 </body>
 </html>
+
